update dockerfile installations

--- a/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
+++ b/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
@@ -9,9 +9,13 @@ RUN apt-get update && pip install -U pip
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client==4.1.3
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
+RUN pip install rasterio==1.1.6
+RUN pip install boto3==1.9.66
+RUN pip install netCDF4==1.4.2
+RUN pip install earthengine-api==0.1.234
 
 # set name
-ARG NAME=loc_mcaqf_mexico_city_aq_forecast
+ARG NAME=loc_mcaqf
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
