--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -6,9 +6,7 @@ MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 RUN apt-get update && pip install -U pip
 
 # install application libraries
-RUN apt-get install -y gdal-bin libgdal-dev
-RUN pip install oauth2client==4.1.3
-RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
+RUN pip install earthengine-api==0.1.234
 
 # set name
 ARG NAME=nrt-script
