make docker stop using alpine

--- a/cit_004_city_aq/Dockerfile
+++ b/cit_004_city_aq/Dockerfile
@@ -1,15 +1,14 @@
-FROM python:3.6-alpine
+FROM python:3.7
 MAINTAINER Taufiq Rashid <taufiq.rashid@wri.org>
 #Note this script was originally developed by Taufiq Rashid <taufiq.rashid@wri.org>
 
 # install core libraries
-RUN apk update
-RUN apk add git
+RUN apt-get update
 
 # install application libraries
 RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install pandas==0.24.2
+RUN pip install pandas==0.25.3
 
 # set name
 ARG NAME=cit_004_city_aq
@@ -21,7 +20,7 @@ WORKDIR /opt/$NAME/
 COPY contents .
 VOLUME ./data
 
-RUN adduser -D $NAME
+RUN useradd $NAME
 RUN chown $NAME:$NAME .
 USER $NAME
 
