--- a/for_003_nrt_glad_deforestation_alerts/Dockerfile
+++ b/for_003_nrt_glad_deforestation_alerts/Dockerfile
@@ -1,21 +1,14 @@
 FROM python:3.6
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
-#Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
+MAINTAINER Yujing Wu <yujing.wu@wri.org>
+#Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
 
 # install core libraries
 RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN apt-get install -y gdal-bin libgdal-dev
+RUN pip install earthengine-api==0.1.240
 RUN pip install oauth2client==4.1.3
-RUN pip install -e git+https://github.com/resource-watch/eeUtil/tree/fix/upgrade_version_gee#egg=eeUtil
-RUN pip install bs4==0.0.1
-RUN pip install Cython==0.29.15
-RUN pip install netCDF4==1.5.3
-
-#install
-RUN apt-get -y install python-gdal
 
 # set name
 ARG NAME=nrt-script
