--- a/loc_mxene_mexico_energy_obs/loc_mxene_mexico_energy_obs_pml/Dockerfile
+++ b/loc_mxene_mexico_energy_obs/loc_mxene_mexico_energy_obs_pml/Dockerfile
@@ -16,7 +16,9 @@ RUN pip install --upgrade pip && pip install \
     numpy==1.19.4 \
     pandas==1.1.4 \
     cartoframes==1.1.0 \
-    bs4==0.0.1 
+    libxml2-python3==2.9.5 \
+    lxml==4.6.2 \
+    beautifulsoup4==4.9.3 
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
