--- a/loc_mxene_mexico_energy_obs/loc_mxene_mexico_nodes_load/Dockerfile
+++ b/loc_mxene_mexico_energy_obs/loc_mxene_mexico_nodes_load/Dockerfile
@@ -16,8 +16,8 @@ RUN pip install --upgrade pip && pip install \
     numpy==1.19.4 \
     pandas==1.1.4 \
     flat-table==1.1.1 \
-    bs4==0.0.1 \
-    xlrd==1.2.0
+    beautifulsoup4==4.9.3 \
+    xlrd==1.2.0 
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
