--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "/home/amsnyder/anaconda3/bin/python"
+    "python.pythonPath": "/home/eduardo/anaconda3/envs/po_env/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
