change google api version

--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && pip install -U pip
 
 # install application libraries
 RUN pip install oauth2client==3.0.0
+RUN pip install google-api-python-client==1.12.8
 RUN pip install earthengine-api==0.1.234
 
 # set name
