--- a/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
+++ b/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && pip install -U pip
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client==4.1.3
+RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install rasterio==1.1.6
 RUN pip install boto3==1.9.66
