--- a/cli_035_surface_temp_analysis/Dockerfile
+++ b/cli_035_surface_temp_analysis/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get install -y \
   && apt-get clean
 
 RUN pip install oauth2client==4.1.3
+RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install numpy==1.18.1 #Install this ahead of rasterio for appropriate applications
 RUN pip install --upgrade pip && pip install \
