updated dockerfile and readme

--- a/soc_016_conflict_protest_events/Dockerfile
+++ b/soc_016_conflict_protest_events/Dockerfile
@@ -8,6 +8,8 @@ RUN apk add git
 
 # install application libraries
 RUN pip install requests==2.22.0
+RUN pip install python-dateutil==2.8.1
+RUN pip install geopandas==0.8.1
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # set name
