--- a/soc_016_conflict_protest_events/Dockerfile
+++ b/soc_016_conflict_protest_events/Dockerfile
@@ -1,15 +1,17 @@
-FROM python:3.6-alpine
+FROM python:3.6
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 #Note this script was originally developed by Francis Gassert <fgassert@wri.org>
 
 # install core libraries
-RUN apk update
-RUN apk add git
+RUN apt-get update
+RUN pip install --upgrade pip
 
 # install application libraries
 RUN pip install requests==2.22.0
 RUN pip install python-dateutil==2.8.1
 RUN pip install geopandas==0.8.1
+RUN pip install Rtree
+
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # set name
@@ -22,7 +24,7 @@ WORKDIR /opt/$NAME/
 COPY contents/ .
 VOLUME ./data
 
-RUN adduser -D $NAME
+RUN useradd $NAME
 RUN chown $NAME:$NAME .
 USER $NAME
 
