--- a/cit_004_city_aq/Dockerfile
+++ b/cit_004_city_aq/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update
 RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install pandas==0.25.3
+RUN pip install numpy==1.16.5
 RUN pip install shapely==1.7.1
 RUN pip install cartoframes==1.1.0
 
@@ -20,7 +21,7 @@ ENV NAME ${NAME}
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents .
-VOLUME ./data
+VOLUME /opt/$NAME/data
 
 RUN useradd $NAME
 RUN chown $NAME:$NAME .
