--- a/ocn_020_nrt_rw0_nutrient_mole_concentration/Dockerfile
+++ b/ocn_020_nrt_rw0_nutrient_mole_concentration/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install GDAL==2.4.2
 RUN apt-get -y install python-gdal
 
 # set name
-ARG NAME=ocn_020_nrt_rw0_nutrient_mole_concentration
+ARG NAME=ocn_020
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
