--- a/foo_003_fews_new_food_insecurity/Dockerfile
+++ b/foo_003_fews_new_food_insecurity/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update
 RUN pip install --upgrade pip
 
 # install application libraries
+RUN pip install bs4==0.0.1
 RUN pip install fiona==1.8.13 shapely==1.6.4 python-dateutil==2.8.0 requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
