--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -1,13 +1,14 @@
-FROM python:3.6-alpine
+FROM python:3.7
 MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
 #Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org> and Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
-RUN echo "http://mirror.leaseweb.com/alpine/edge/testing/" >> /etc/apk/repositories
-RUN apk add --no-cache geos-dev
-RUN apk update && apk upgrade && \
-   apk add --no-cache --update bash git openssl-dev build-base alpine-sdk \
-   libffi-dev gcc python3-dev musl-dev
+# RUN echo "http://mirror.leaseweb.com/alpine/edge/testing/" >> /etc/apk/repositories
+# RUN apk add --no-cache geos-dev
+# RUN apk update && apk upgrade && \
+#    apk add --no-cache --update bash git openssl-dev build-base alpine-sdk \
+#    libffi-dev gcc python3-dev musl-dev
+RUN apt-get update
 # install application libraries
 RUN pip install --upgrade pip
 RUN pip install requests==2.22.0
