update ssl certification setting and python

--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:3.6
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+FROM python:3.7.7
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
