--- a/pause/soc_062_internal_displacement/Dockerfile
+++ b/pause/soc_062_internal_displacement/Dockerfile
@@ -1,13 +1,14 @@
-FROM python:3.9
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+FROM python:3.6-alpine
+MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
-RUN apt-get update && pip install -U pip
+RUN apk update
+RUN apk add git
 
 # install application libraries
 RUN pip install requests==2.22.0
-RUN pip install pandas==0.24.2
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # set name
 ARG NAME=nrt-script
@@ -16,11 +17,11 @@ ENV NAME ${NAME}
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
-COPY contents/ .
+COPY contents .
+VOLUME ./data
 
-RUN useradd -r $NAME
-RUN chown -R $NAME:$NAME /opt/$NAME
-VOLUME /opt/$NAME/data
+RUN adduser -D $NAME
+RUN chown $NAME:$NAME .
 USER $NAME
 
 CMD ["python", "main.py"]
