update to python 3.9

--- a/upload_eia_data/Dockerfile
+++ b/upload_eia_data/Dockerfile
@@ -1,17 +1,19 @@
-FROM python:3.6
+FROM python:3.9
 MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by  Weiqi Zhou <weiqi.zhou@wri.org>
 
 # install core libraries
 RUN apt-get update && pip install -U pip
 
 # install application libraries
-RUN pip install pandas==0.24.2
+RUN pip install pandas==2.0.3
 RUN pip install boto3==1.10.45
 RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install carto==1.11.1
 RUN pip install LMIPy==0.2.8
-RUN pip install cartoframes==1.0.2
+RUN pip install cartoframes==1.2.5
+RUN pip install markupsafe==2.0.1
 
 # set name
 ARG NAME=upload-world-bank
