--- a/dis_012_landslide_hazard_alerts/Dockerfile
+++ b/dis_012_landslide_hazard_alerts/Dockerfile
@@ -1,18 +1,19 @@
-FROM python:3.6-alpine
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
-#Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org> and maintained by Amelia Snyder
 
 # install core libraries
-RUN apk update
-RUN apk add git
+RUN apt-get update
+# RUN pip install -U pip
+# RUN apt-get install -y cron
 
 # install application libraries
-RUN pip install requests==2.22.0
-RUN pip install simplejson==3.17.0
+RUN pip install requests==2.31.0
+RUN pip install simplejson==3.19.1
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # set name
-ARG NAME=dis_012
+ARG NAME=dis_012_landslide_hazard_alerts
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
@@ -21,8 +22,8 @@ WORKDIR /opt/$NAME/
 COPY contents/ .
 VOLUME ./data
 
-RUN adduser -D $NAME
-RUN chown $NAME:$NAME .
+RUN adduser $NAME
+RUN chown -R $NAME:$NAME .
 USER $NAME
 
 CMD ["python", "main.py"]
