--- a/upload_worldbank_data/Dockerfile
+++ b/upload_worldbank_data/Dockerfile
@@ -1,17 +1,19 @@
-FROM python:3.6
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by Amelia Snyder
 
 # install core libraries
-RUN apt-get update && pip install -U pip
+RUN apt-get update 
+RUN pip install -U pip
 
 # install application libraries
-RUN pip install pandas==0.24.2
-RUN pip install boto3==1.10.45
-RUN pip install requests==2.22.0
+RUN pip install pandas==1.3.5
+RUN pip install boto3==1.28.9
+RUN pip install requests==2.31.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install carto==1.11.1
+RUN pip install carto==1.11.3
 RUN pip install LMIPy==0.2.8
-RUN pip install cartoframes==1.0.2
+RUN pip install cartoframes==1.2.5
 
 # set name
 ARG NAME=upload-world-bank
@@ -22,7 +24,7 @@ RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents .
 
-RUN useradd -r $NAME
+RUN adduser $NAME
 RUN chown -R $NAME:$NAME /opt/$NAME
 VOLUME /opt/$NAME/data
 USER $NAME
