--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.6
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
-#Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+#Note this script was originally developed by Amelia Snyder
 
 # install core libraries
 RUN apt-get update && pip install -U pip
