update to python 3.9 and ignore 503 error

--- a/ocn_011_nrt_rw0_total_suspended_matter/Dockerfile
+++ b/ocn_011_nrt_rw0_total_suspended_matter/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.6
-MAINTAINER Yujing Wu <yujing.wu@wri.org>
-#Note this script was originally developed by Peter Kerins <Peter.Kerins@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by Peter Kerins and maintained by Yujing Wu
 
 # install core libraries
 RUN apt-get update
@@ -10,9 +10,9 @@ RUN pip install -U pip
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client==4.1.3
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install requests==2.22.0
-RUN pip install numpy==1.14.3
-RUN pip install Cython==0.29.15
+RUN pip install requests==2.31.0
+RUN pip install numpy==1.25.2
+RUN pip install Cython==3.0.0
 
 # set name
 ARG NAME=ocn_011_total_suspended_matter
@@ -23,8 +23,8 @@ RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
 
-RUN useradd -r $NAME
-RUN chown -R $NAME:$NAME /opt/$NAME
+RUN useradd $NAME
+RUN chown -R $NAME:$NAME .
 USER $NAME
 
 CMD ["python", "main.py"]
