update to python 3.9 and remove old records

--- a/dis_015a_tropical_cyclones/Dockerfile
+++ b/dis_015a_tropical_cyclones/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.6
-MAINTAINER Taufiq Rashid <taufiq.rashid@wri.org>
-#Note this script was originally developed by Taufiq Rashid <taufiq.rashid@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by Taufiq Rashid <taufiq.rashid@wri.org>
 
 # set name
 ARG NAME=dis_015a_tropical_cyclones
@@ -12,11 +12,9 @@ RUN apt-get install -y cron
 
 # install application libraries
 RUN pip install --upgrade pip  
-RUN pip install pandas==0.25.3 numpy==1.18.1
-RUN pip install geopandas==0.9.0 \
-	glob2==0.7 \
-    requests==2.22.0 fiona==1.8.13
-RUN pip install -U carto cartoframes==1.0.4
+RUN pip install pandas numpy
+RUN pip install geopandas glob2 requests fiona
+RUN pip install -U carto cartoframes
 RUN pip install LMIPy==0.2.8
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql 
 
