--- a/cit_003_air_quality/Dockerfile
+++ b/cit_003_air_quality/Dockerfile
@@ -5,7 +5,8 @@ MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
 # install core libraries
 # RUN apk update
 # RUN apk add git
-RUN apt-get update && apt-get install -y apt-transport-https
+RUN sed -i -e 's/^APT/# APT/' -e 's/^DPkg/# DPkg/' /etc/apt/apt.conf.d/docker-clean
+RUN apt-get update
 
 # install application libraries
 RUN pip install requests==2.22.0
