--- a/cit_003_air_quality/Dockerfile
+++ b/cit_003_air_quality/Dockerfile
@@ -3,11 +3,8 @@ MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
 #Note this script was originally developed by Francis Gassert <fgassert@wri.org>
 
 # install core libraries
-# RUN apk update
-# RUN apk add git
-# RUN sed -i -e 's/^APT/# APT/' -e 's/^DPkg/# DPkg/' /etc/apt/apt.conf.d/docker-clean
-# RUN apt-get update && apt-get install -y apt-transport-https
-# RUN pip install --upgrade pip
+RUN apt-get update
+RUN pip install -U pip
 
 # install application libraries
 RUN pip install requests
