Use better maintained Github Action for running ssh commands

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,13 @@ jobs:
     - uses: actions/checkout@v4.1.1
 
     - name: Run SSH command
-      uses: garygrossgarten/github-action-ssh@release
+      uses: appleboy/ssh-action@v1.0.0
       with:
         # Command to execute on the remote server.
-        command: sudo /home/ubuntu/scripts/install.sh
+        script: sudo /home/ubuntu/scripts/install.sh
         # Hostname or IP address of the server.
         host: ec2-3-80-230-37.compute-1.amazonaws.com
         # Username for authentication.
         username: ubuntu
         # File Location or string that contains a private key for either key-based or hostbased user authentication (OpenSSH format)
-        privateKey: ${{secrets.EC2_PRIVATE_KEY}}
+        key: ${{secrets.EC2_PRIVATE_KEY}}
