--- a/dis_013_volcano_eruptions/Dockerfile
+++ b/dis_013_volcano_eruptions/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.6
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
-ARG NAME=dis_013_volcano_eruptions
+# set name
+ARG NAME=nrt-script
 ENV NAME ${NAME}
 
 
