--- a/ocn_007_coral_bleaching_monitoring/Dockerfile
+++ b/ocn_007_coral_bleaching_monitoring/Dockerfile
@@ -18,7 +18,7 @@ RUN pip install GDAL==2.4.2
 RUN apt-get -y install python-gdal
 
 # set name
-ARG NAME=ocn_007_coral_bleaching_monitoring
+ARG NAME=nrt-script
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
