--- a/upload_eia_data/Dockerfile
+++ b/upload_eia_data/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install cartoframes==1.2.5
 RUN pip install markupsafe==2.0.1
 
 # set name
-ARG NAME=upload-world-bank
+ARG NAME=nrt-script
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
