--- a/cli_060_viirs/Dockerfile
+++ b/cli_060_viirs/Dockerfile
@@ -1,12 +1,13 @@
-FROM python:3.6-alpine
+FROM python:3.9
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 #Note this script was originally developed by Francis Gassert <fgassert@wri.org>
 
 # install core libraries
-RUN apk update
+RUN apt-get update
+RUN pip install -U pip
 
 # install application libraries
-RUN pip install requests==2.22.0
+RUN pip install requests
 
 # set name
 ARG NAME=nrt-script
@@ -16,7 +17,7 @@ ENV NAME ${NAME}
 WORKDIR /opt/$NAME/
 COPY contents/ .
 
-RUN adduser -D $NAME
+RUN useradd $NAME
 RUN chown $NAME:$NAME .
 USER $NAME
 
