--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install --upgrade pip
 RUN pip install requests
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install shapely
-RUN pip install numpy==1.18.1
+RUN pip install numpy
 RUN pip install pandas==0.25.3
 RUN pip install python-dateutil
 RUN pip install backoff
