update Dockerfile format

--- a/check_if_nrt_datasets_current/Dockerfile
+++ b/check_if_nrt_datasets_current/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+LABLE maintainer="Weiqi Zhou <weiqi.zhou@wri.org>"
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
@@ -11,7 +11,7 @@ RUN pip install pandas==2.2.2
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
