--- a/cit_041a_gtfs_point_locations/Dockerfile
+++ b/cit_041a_gtfs_point_locations/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-MAINTAINER Kristine Lister <kristine.lister@wri.org>
+LABLE maintainer="Kristine Lister <kristine.lister@wri.org>"
 #Note this script was originally developed by Ken Wakabayashi <ken.wakabayashi@wri.org> and Kristine Lister <kristine.lister@wri.org>
 
 # install core libraries
@@ -8,10 +8,10 @@ RUN pip install -U pip
 
 # install application libraries
 RUN pip install --upgrade pip
-RUN pip install requests==2.22.0
+RUN pip install requests==2.32.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install numpy==1.18.1
-RUN pip install pandas==0.25.3 numpy==1.18.1
+RUN pip install numpy==1.26.4
+RUN pip install pandas==2.2.2
 RUN pip install boto3==1.11.8
 RUN pip install shapely==1.6.4
 RUN pip install carto==1.8.4 cartoframes==0.9.2
@@ -19,7 +19,7 @@ RUN pip install carto==1.8.4 cartoframes==0.9.2
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
