update Dockerfile format

--- a/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
+++ b/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-LABLE maintainer="Amelia Snyder <amelia.snyder@wri.org>"
+LABEL maintainer="Amelia Snyder <amelia.snyder@wri.org>"
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
