--- a/cit_041a_gtfs_point_locations/Dockerfile
+++ b/cit_041a_gtfs_point_locations/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-LABLE maintainer="Kristine Lister <kristine.lister@wri.org>"
+LABEL maintainer="Kristine Lister <kristine.lister@wri.org>"
 #Note this script was originally developed by Ken Wakabayashi <ken.wakabayashi@wri.org> and Kristine Lister <kristine.lister@wri.org>
 
 # install core libraries
