--- a/cli_037_smoke_plumes_US/Dockerfile
+++ b/cli_037_smoke_plumes_US/Dockerfile
@@ -1,15 +1,15 @@
 FROM python:3.6
-MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+LABEL maintainer="Amelia Snyder <amelia.snyder@wri.org>"
 #Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org>
 
 # install application libraries
 RUN pip install --upgrade pip && \
     pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql && \
-    pip install requests==2.22.0 fiona==1.8.13
+    pip install requests==2.32.0 fiona==1.8.13
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
