--- a/cli_045_gcc_co2_concentrations/Dockerfile
+++ b/cli_045_gcc_co2_concentrations/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.6
-MAINTAINER Taufiq Rashid <taufiq.rashid@wri.org>
+LABEL maintainer="Taufiq Rashid <taufiq.rashid@wri.org>"
 #Note this script was originally developed by Taufiq Rashid <taufiq.rashid@wri.org>
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # install core libraries
 RUN apt-get update
@@ -12,11 +12,11 @@ RUN apt-get install -y cron
 
 # install application libraries
 RUN pip install --upgrade pip
-RUN pip install requests==2.22.0 \
+RUN pip install requests==2.32.0 \
     python-dateutil==2.6.1 \
     pytz==2017.3 \
     wget==3.2
-RUN pip install pandas==0.25.3 numpy==1.18.1
+RUN pip install pandas==2.2.2 numpy==1.26.4
 RUN pip install carto==1.8.4 cartoframes==0.9.2
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
