--- a/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
+++ b/loc_mcaqf_mexico_city_aq_forecast/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+LABEL maintainer="Weiqi Zhou <weiqi.zhou@wri.org>"
 #Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
@@ -12,12 +12,12 @@ RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install rasterio==1.1.6
 RUN pip install boto3==1.9.66
-RUN pip install netCDF4==1.4.2
+RUN pip install netCDF4==1.7.1
 RUN pip install earthengine-api==0.1.234
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
