--- a/foo_024_051_vegetation_health_products/Dockerfile
+++ b/foo_024_051_vegetation_health_products/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+LABEL maintainer="Weiqi Zhou <weiqi.zhou@wri.org>"
 #Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org>
 
 # install core libraries
@@ -9,14 +9,14 @@ RUN pip install -U pip
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install numpy==1.18.1
+RUN pip install numpy==1.26.4
 RUN pip install \
-    netCDF4==1.5.3 \
-    rasterio==1.1.2
+    netCDF4==1.7.1 \
+    rasterio==1.3.10
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
