--- a/for_003_nrt_rw1_glad_deforestation_alerts/Dockerfile
+++ b/for_003_nrt_rw1_glad_deforestation_alerts/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+LABEL maintainer="Weiqi Zhou <weiqi.zhou@wri.org>"
 #Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
 
 # install core libraries
@@ -12,7 +12,7 @@ RUN pip install oauth2client==4.1.3
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
