--- a/ocn_007_coral_bleaching_monitoring/Dockerfile
+++ b/ocn_007_coral_bleaching_monitoring/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7.7
-MAINTAINER Taufiq Rashid <taufiq.rashid@wri.org>
+LABEL maintainer="Taufiq Rashid <taufiq.rashid@wri.org>"
 #Note this script was originally developed by Taufiq Rashid <taufiq.rashid@wri.org>
 
 # install core libraries
@@ -12,14 +12,14 @@ RUN pip install oauth2client==4.1.3
 RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install requests==2.22.0
-RUN pip install numpy==1.14.3
+RUN pip install numpy==1.26.4
 RUN pip install Cython==0.29.15
 RUN pip install GDAL==2.4.2
 RUN apt-get -y install python-gdal
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
