--- a/ocn_011_nrt_rw0_total_suspended_matter/Dockerfile
+++ b/ocn_011_nrt_rw0_total_suspended_matter/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9
-MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+LABEL maintainer="Weiqi Zhou <weiqi.zhou@wri.org>"
 # Note this script was originally developed by Peter Kerins and maintained by Yujing Wu
 
 # install core libraries
@@ -11,12 +11,12 @@ RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client==4.1.3
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install requests==2.31.0
-RUN pip install numpy==1.25.2
+RUN pip install numpy==1.26.4
 RUN pip install Cython==3.0.0
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
